Move home page to templates folder to enable CMS data access

--- a/cms_package/manifest.json
+++ b/cms_package/manifest.json
@@ -2,7 +2,7 @@
   "pages": [
     {
       "path": "/",
-      "file": "pages/index.html",
+      "file": "templates/home.html",
       "title": "Home",
       "editable": true
     },
