Add videos collection with stunning cinematic gallery pages
- Created videos collection in CMS with fields: thumbnail, video_url, duration, category, description, featured
- Added videos_index.html with featured video hero section and responsive grid
- Added video_detail.html with embedded video player and info section
- Added comprehensive video CSS styles with play button overlays, hover effects
- Updated navigation across all templates to include Videos link
- Updated manifest.json with videos templates configuration

--- a/cms_package/manifest.json
+++ b/cms_package/manifest.json
@@ -24,6 +24,10 @@
     "eventsIndexPath": "/events",
     "eventsDetail": "templates/event_detail.html",
     "eventsDetailPath": "/events",
+    "videosIndex": "templates/videos_index.html",
+    "videosIndexPath": "/videos",
+    "videosDetail": "templates/video_detail.html",
+    "videosDetailPath": "/videos",
     "merchIndex": "templates/merch_index.html",
     "merchIndexPath": "/merch",
     "merchDetail": "templates/merch_detail.html",
